--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,11 @@ td {
     font-size:20px;
 }
 .ProjectList{
+    text-align: center;
     font-size:30px;
+    width:60%;
+    margin:auto;
+    margin-top: 40px;
 }
 #Name{
     font-size: 70px;
@@ -114,4 +118,20 @@ td {
     width:600px;
 }
 
+.project{
+    margin:20px;
+}
+
+.project_details{
+    margin:20px;
+    line-height:50px;
+}
+.all_projects{
+    text-align:center;
+    font-size:35px;
+}
+
+.project_type{
+    margin-bottom: 100px;
+}
 
