--- a/projects/Snake/snake.css
+++ b/projects/Snake/snake.css
@@ -10,12 +10,12 @@
 }
 
 body {
-    background-color:#BA6222;
-    color: #453823;
+    background-color: white;
+    color: #192841;
 }
 
 header {
-    background-color:#738F9B;;
+    background-color:RGB(196,202,206);
     padding: 70px;
     margin-top :-10px;
     margin-left : -10px;
@@ -24,15 +24,16 @@ header {
 a:link{
     font-weight: bold;
     text-decoration: none;
-    color:#E49135;
+    color:#2f3b47;
 }
 a:visited{
     text-decoration: none;
-    color:#E49135;
+    color:#2f3b47;
 }
 a:hover{
-    color:#EFDD6F;
+    color:#b4a331;
 }
+
 
 
 .localLink {
@@ -80,7 +81,7 @@ a:hover{
 
 #gameBox{
     margin: auto;
-    background-color: beige;
+    background-color: rgba(194, 194, 194, 0.486);
     width:700px;
     height:700px;
     display:block;
