--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ a:hover{
     margin: auto;
     text-align: center;
     width: 50%;
-    padding:200px;
+    margin-top:15%;
+    padding:0px;
     text-shadow: -1px 0 #E5E5E5, 0 1px #E5E5E5, 1px 0 #E5E5E5, 0 -1px #E5E5E5;
 }
 
